[package]
name = "dummy"
version = "0.1.0"
description = "Example Zabbix loadable module written in Rust"
authors = ["Marin Atanasov Nikolov <dnaeon@gmail.com>"]

[lib]
name = "rust_dummy"
crate-type = ["dylib"]

[dependencies.rand]
version = "*"

[dependencies.zbx]
git = "https://github.com/dnaeon/rust-zbx.git"
version = "*"

